tests/ui/cve_2021_45688/cve_2021_45688.stderr
error: it violates the precondition of `std::slice::from_raw_parts_mut` to create a slice from uninitialized data
  --> tests/ui/cve_2021_45688/cve_2021_45688.rs:27:21
   |
LL |     let mut result = Vec::<u32>::with_capacity(words);
   |                      -------------------------------- `std::vec::Vec` created but not initialized
...
LL |         for word in &mut result {
   |                     ^^^^^^^^^^^
   |                     |
   |                     slice created here
   |                     slice created with this length
   |                     slice created with this pointer
   |
   = help: See https://doc.rust-lang.org/std/slice/fn.std::slice::from_raw_parts_mut.html
   = note: `#[deny(rpl::slice_from_raw_parts_uninitialized)]` on by default

error: aborting due to 1 previous error

